--- a/ekoterm-org-ember/app/templates/application.hbs
+++ b/ekoterm-org-ember/app/templates/application.hbs
@@ -1,15 +1,7 @@
-<h2 id="title">Welcome to Ember</h2>
-<div class="btn-group" role="group" aria-label="...">
-  <button type="button" class="btn btn-default">Left</button>
-  <button type="button" class="btn btn-default">Middle</button>
-  <button type="button" class="btn btn-default">Right</button>
+<div class="container" id="main">
+  {{render 'header'}}
+
+  {{outlet}}
 </div>
 
-<span class="label label-default">Default</span>
-<span class="label label-primary">Primary</span>
-<span class="label label-success">Success</span>
-<span class="label label-info">Info</span>
-<span class="label label-warning">Warning</span>
-<span class="label label-danger">Danger</span>
-
-{{outlet}}
+{{render 'footer'}}
