Added Bootstrap 3 via ember-bootstrap and coded some of the header

--- a/ekoterm-org-ember/app/styles/app.css
+++ b/ekoterm-org-ember/app/styles/app.css
@@ -1,3 +1,7 @@
 /* ---------------------------------------------
    Navbar
    --------------------------------------------- */
+
+.searchInput {
+  width: 200px;
+}
