--- a/ekoterm-org-ember/app/templates/header.hbs
+++ b/ekoterm-org-ember/app/templates/header.hbs
@@ -1,7 +1,7 @@
-<div class="navbar navbar-fixed-top">
+{{!-- <div class="navbar navbar-fixed-top">
   <div class="container">
     <a href="/" class="navbar-brand">
-      <img src="images/logo.png" alt="Your Logo">
+      <img src="images/logo2.png" alt="Your Logo">
     </a>
 
     <div class="nav-collapse collapse navbar-responsive-collapse">
@@ -26,6 +26,52 @@
     </div>
 
 
+
+
   </div>
 </div>
+ --}}
 
+<nav class="navbar navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      {{#link-to "index" class="navbar-brand"}}
+        <img src="images/logo.png" alt="Your Logo">
+      {{/link-to}}
+    </div>
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Services</a></li>
+        {{#bs-dropdown tagName="li"}}
+          {{#bs-dropdown-toggle}}
+            Dropdown <span class="caret"></span>
+          {{/bs-dropdown-toggle}}
+          {{#bs-dropdown-menu}}
+            <li>{{#link-to "index"}} Example {{/link-to}}</li>
+            <li>{{#link-to "index"}} Example2 {{/link-to}}</li>
+            <li role="separator" class="divider"></li>
+            <li>{{#link-to "index"}} Separated link {{/link-to}}</li>
+            <li role="separator" class="divider"></li>
+            <li>{{#link-to "index"}} One more separated link {{/link-to}}</li>
+          {{/bs-dropdown-menu}}
+        {{/bs-dropdown}}
+      </ul>
+
+      {{#bs-form action="submit" layoutClass="navbar-form"}}
+        {{#bs-form-group}}
+          {{bs-input type="text" class="searchInput" placeholder="Search this site..."}}
+          {{bs-button type="default" buttonType="submit" icon="glyphicon glyphicon-search"}}
+        {{/bs-form-group}}
+      {{/bs-form}}
+
+    </div>
+  </div>
+</nav>
