--- a/ekoterm-org-ember/app/templates/header.hbs
+++ b/ekoterm-org-ember/app/templates/header.hbs
@@ -32,7 +32,7 @@
 </div>
  --}}
 
-<nav class="navbar navbar-fixed-top">
+<nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -42,7 +42,7 @@
         <span class="icon-bar"></span>
       </button>
       {{#link-to "index" class="navbar-brand"}}
-        <img src="images/logo.png" alt="Your Logo">
+        <img src="images/logo2.png" alt="Your Logo">
       {{/link-to}}
     </div>
 
