--- a/ekoterm-org-ember/app/templates/header.hbs
+++ b/ekoterm-org-ember/app/templates/header.hbs
@@ -49,29 +49,45 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Services</a></li>
         {{#bs-dropdown tagName="li"}}
           {{#bs-dropdown-toggle}}
-            Dropdown <span class="caret"></span>
+            Services <span class="caret"></span>
           {{/bs-dropdown-toggle}}
           {{#bs-dropdown-menu}}
-            <li>{{#link-to "index"}} Example {{/link-to}}</li>
-            <li>{{#link-to "index"}} Example2 {{/link-to}}</li>
+            <li>{{#link-to "index"}} Web Design {{/link-to}}</li>
+            <li>{{#link-to "index"}} Web Dev {{/link-to}}</li>
             <li role="separator" class="divider"></li>
+            <li class="dropdown-header">More Services</li>
             <li>{{#link-to "index"}} Separated link {{/link-to}}</li>
             <li role="separator" class="divider"></li>
             <li>{{#link-to "index"}} One more separated link {{/link-to}}</li>
           {{/bs-dropdown-menu}}
         {{/bs-dropdown}}
+
       </ul>
 
-      {{#bs-form action="submit" layoutClass="navbar-form"}}
+      {{#bs-form action="submit" layoutClass="navbar-form pull-left"}}
         {{#bs-form-group}}
           {{bs-input type="text" class="searchInput" placeholder="Search this site..."}}
           {{bs-button type="default" buttonType="submit" icon="glyphicon glyphicon-search"}}
         {{/bs-form-group}}
-      {{/bs-form}}
+      {{/bs-form}}{{!-- 
 
+       --}}<ul class="nav navbar-nav pull-right">
+        {{#bs-dropdown tagName="li"}}
+          {{#bs-dropdown-toggle}}
+            <span class="glyphicon glyphicon-user"></span>
+            My Account <span class="caret"></span>
+          {{/bs-dropdown-toggle}}
+          {{#bs-dropdown-menu}}
+            <li>{{#link-to "index"}} <span class="glyphicon glyphicon-wrench"></span> Settings {{/link-to}}</li>
+            <li>{{#link-to "index"}} <span class="glyphicon glyphicon-refresh"></span> Profile {{/link-to}}</li>
+            <li>{{#link-to "index"}} <span class="glyphicon glyphicon-briefcase"></span> Billing {{/link-to}}</li>
+            <li role="separator" class="divider"></li>
+            <li>{{#link-to "index"}} <span class="glyphicon glyphicon-off"></span> Logout {{/link-to}}</li>
+          {{/bs-dropdown-menu}}
+        {{/bs-dropdown}}
+      </ul>
     </div>
   </div>
 </nav>
