--- a/ekoterm-org-ember/app/styles/app.css
+++ b/ekoterm-org-ember/app/styles/app.css
@@ -1,7 +1,108 @@
-/* ---------------------------------------------
-   Navbar
-   --------------------------------------------- */
+/*-----------------------------
+  Typography
+  -----------------------------*/
+
+.well .page-header {
+  margin-top: 0;
+}
+
+.well .page-header h1 {
+  margin-top: 0;
+}
+
+/*-----------------------------
+  Global Styles
+  -----------------------------*/
+
+.alert {
+  margin-top: 20px;
+}
+
+.well {
+  margin: 20px 0;
+}
+
+/*-----------------------------
+  Navbar
+  -----------------------------*/
 
 .searchInput {
   width: 200px;
 }
+
+/*-----------------------------
+  Carousel
+   -----------------------------*/
+
+.carousel-caption {
+  font-size: 24px;
+}
+
+.carousel-caption h4 {
+  font-size: 32px;
+}
+
+#ekoCarousel .item { height: 400px; }
+
+#slide1 {
+  background: url('../images/carousel_medium_01.jpg') top center no-repeat;
+}
+
+#slide2 {
+  background: url('../images/carousel_medium_02.jpg') top center no-repeat;
+}
+
+#slide3 {
+  background: url('../images/carousel_medium_03.jpg') top center no-repeat;
+}
+
+/*-----------------------------
+  Media Queries
+   -----------------------------*/
+
+/* Portrait & landscape phone */
+@media (max-width: 400px) {
+}
+
+/*Landscape phone to portrait tablet*/
+@media (max-width: 768px) {
+  #ekoCarousel .item { height: 310px; }
+
+  #slide1 {
+    background: url('../images/carousel_small_01.jpg') top center no-repeat;
+  }
+
+  #slide2 {
+    background: url('../images/carousel_small_02.jpg') top center no-repeat;
+  }
+
+  #slide3 {
+    background: url('../images/carousel_small_03.jpg') top center no-repeat;
+  }
+
+  .carousel-caption {
+    font-size: 16px;
+  }
+
+  .carousel-caption h4 {
+    font-size: 22px;
+  }
+}
+
+/*Large desktop*/
+@media (min-width: 1200px) {
+  #ekoCarousel .item { height: 500px; }
+
+  #slide1 {
+    background: url('../images/carousel_large_01.jpg') top center no-repeat;
+  }
+
+  #slide2 {
+    background: url('../images/carousel_large_02.jpg') top center no-repeat;
+  }
+
+  #slide3 {
+    background: url('../images/carousel_large_03.jpg') top center no-repeat;
+  }
+}
+
