--- a/ekoterm-org-ember/app/templates/header.hbs
+++ b/ekoterm-org-ember/app/templates/header.hbs
@@ -1,57 +1,30 @@
-{{!-- <div class="navbar navbar-fixed-top">
-  <div class="container">
-    <a href="/" class="navbar-brand">
-      <img src="images/logo2.png" alt="Your Logo">
-    </a>
-
-    <div class="nav-collapse collapse navbar-responsive-collapse">
-
-      <ul class="nav navbar-nav">
-        <li class="active">
-          <a href="#">Home</a>
-        </li>
-
-        <li>
-          <a href="#">Services</a>
-        </li>
-      </ul>
-
-      <form class="navbar-form">
-        <input type="text" class="form-control" placeholder="Search this site..." id="searchInput">
-        <button type="submit" class="btn btn-default">
-          <span class="glyphicon glyphicon-search"></span>
-        </button>
-
-      </form>
-    </div>
-
-
-
-
-  </div>
-</div>
- --}}
-
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-responsive-collapse" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
       {{#link-to "index" class="navbar-brand"}}
-        <img src="images/logo2.png" alt="Your Logo">
+        <img src="images/logo2.png" alt="EkoTERM">
       {{/link-to}}
     </div>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="navbar-responsive-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
+        {{#link-to 'index' tagName='li'}}
+          {{#link-to "index"}}
+            Главная <span class="sr-only">(current)</span>
+          {{/link-to}}
+        {{/link-to}}
+        {{#link-to 'about' tagName='li'}}
+          {{link-to "О нас" "about"}}
+        {{/link-to}}
         {{#bs-dropdown tagName="li"}}
           {{#bs-dropdown-toggle}}
-            Services <span class="caret"></span>
+            Меню <span class="caret"></span>
           {{/bs-dropdown-toggle}}
           {{#bs-dropdown-menu}}
             <li>{{#link-to "index"}} Web Design {{/link-to}}</li>
@@ -71,13 +44,12 @@
           {{bs-input type="text" class="searchInput" placeholder="Search this site..."}}
           {{bs-button type="default" buttonType="submit" icon="glyphicon glyphicon-search"}}
         {{/bs-form-group}}
-      {{/bs-form}}{{!-- 
+      {{/bs-form}}
 
-       --}}<ul class="nav navbar-nav pull-right">
+      <ul class="nav navbar-nav pull-right">
         {{#bs-dropdown tagName="li"}}
           {{#bs-dropdown-toggle}}
-            <span class="glyphicon glyphicon-user"></span>
-            My Account <span class="caret"></span>
+            <span class="glyphicon glyphicon-user"></span> j <span class="caret"></span>
           {{/bs-dropdown-toggle}}
           {{#bs-dropdown-menu}}
             <li>{{#link-to "index"}} <span class="glyphicon glyphicon-wrench"></span> Settings {{/link-to}}</li>
@@ -91,3 +63,6 @@
     </div>
   </div>
 </nav>
+
+
+
