--- a/ekoterm-org-ember/app/templates/index.hbs
+++ b/ekoterm-org-ember/app/templates/index.hbs
@@ -46,7 +46,6 @@
         <p>You just made this element display by using jQuery</p>
       {{/bs-alert}}
     {{/if}}
-    
 
     {{!-- Visible only on small devices --}}
     <div class="well well-small visible-xs">
@@ -72,11 +71,24 @@
 </div>{{!-- end bigCallout --}}
 
 <div class="row" id="featuresHeading">
-  
+  <div class="col-md-12">
+    <h2>Больше продуктов</h2>
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua.</p>
+  </div>
 </div>
 
 <div class="row" id="features">
+  <div class="col-sm-4 feature">
+    <div class="panel">
+      <div class="panel-heading">
+        <h3 class="panel-title">Кран Маевского</h3>
+      </div>
+      <img src="images/maevsk_01.jpg" alt="Кран Маевского">
 
+      <p>Супер кран маевского с полной закруткой и латунной откруткой</p>
+    </div>
+  </div>
 </div>
 
 <div class="row" id="moreInfo">
