--- a/ekoterm-org-ember/app/styles/app.css
+++ b/ekoterm-org-ember/app/styles/app.css
@@ -1,4 +1,20 @@
 /*-----------------------------
+  Layout
+  -----------------------------*/
+
+#features {
+  text-align: center;
+}
+
+#features img {
+  margin: 0 0 20px;
+}
+
+#inputMessage {
+  margin-bottom: 15px;
+}
+
+/*-----------------------------
   Typography
   -----------------------------*/
 
@@ -20,6 +36,10 @@
 
 .well {
   margin: 20px 0;
+}
+
+.tabbable img.thumbnail {
+  margin: 0 20px 10px 0;
 }
 
 /*-----------------------------
