--- a/ekoterm-org-ember/app/templates/header.hbs
+++ b/ekoterm-org-ember/app/templates/header.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+{{!-- <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-responsive-collapse" aria-expanded="false">
@@ -62,7 +62,7 @@
       </ul>
     </div>
   </div>
-</nav>
+</nav> --}}
 
 
 
