Changed navbar to navbar-default

--- a/ekoterm-org-ember/app/templates/components/bs-tabs-directions.hbs
+++ b/ekoterm-org-ember/app/templates/components/bs-tabs-directions.hbs
@@ -48,7 +48,7 @@
         Click for a Modal Window!
       </button>
 
-      {{#bs-modal open=true title="Простой попап"}}
+      {{#bs-modal open=displayModal title="Простой попап"}}
         {{!-- {{#bs-modal-body}}Are you sure? --}}
           <h4>Hello world!</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, est. Deserunt error alias, totam nobis sed nisi a quasi, odit dolore excepturi voluptatem, hic consectetur mollitia porro et voluptatum doloremque?</p>
