Finished adding example bootstrap elems

--- a/ekoterm-org-ember/app/templates/components/bs-tabs-directions.hbs
+++ b/ekoterm-org-ember/app/templates/components/bs-tabs-directions.hbs
@@ -57,7 +57,7 @@
           <a href="#" class="btn btn-danger pop" data-toggle="popover" data-placement="top" data="You clicked it!" data-content="I knew you would">Don't click this button</a>
 
           <h4>Tooltips in modal</h4>
-          <a href="">This link</a> should have a tooltip, and so should <a href="">this one</a>!
+          <a href="" data-original-title="Tooltip" rel="tooltip">This link</a> should have a tooltip, and so should <a href="" data-original-title="Woohoo!" rel="tooltip">this one</a>!
 
           <hr>
 
