--- a/ekoterm-org-ember/app/templates/footer.hbs
+++ b/ekoterm-org-ember/app/templates/footer.hbs
@@ -1,5 +1,41 @@
 <footer>
-  <h5>Footer</h5>
 
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-2">
+        <h6>Copyright &copy; 2016 Dmytro</h6>
+      </div>{{!-- end col-sm-2 --}}
+
+      <div class="col-sm-4">
+        <h6>О нас</h6>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deserunt, animi dolore repellat! Sunt magni quasi, recusandae blanditiis fuga, iusto ex, asperiores quos, quaerat deserunt beatae voluptas quisquam? Reprehenderit, eaque.</p>
+      </div>
+
+      <div class="col-sm-2">
+        <h6>Навигация</h6>
+
+        <ul class="unstyled">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>{{!-- end col-sm-2 --}}
+
+      <div class="col-sm-2">
+        <h6>Мы в соцсетях</h6>
+
+        <ul class="unstyled">
+          <li><a href="#">Twitter</a></li>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Google Plus</a></li>
+        </ul>
+      </div>{{!-- end col-sm-2 --}}
+
+      <div class="col-sm-2">
+        <h6>Coded with <span class="glyphicon glyphicon-heart"></span> by Dmytro</h6>
+      </div>{{!-- end col-sm-2 --}}
+    </div>{{!-- end row --}}
+  </div>{{!-- end container --}}
 
 </footer>
