--- a/ekoterm-org-ember/app/templates/index.hbs
+++ b/ekoterm-org-ember/app/templates/index.hbs
@@ -134,8 +134,78 @@
 
     {{bs-tabs-directions}}
   </div>{{!-- end col-sm-6 --}}
+
+  <div class="col-sm-6">
+    <h3>Some Text Info</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi iure animi laboriosam vitae, cumque sapiente quisquam excepturi earum minus ex facere reiciendis maxime possimus esse aperiam, nobis obcaecati alias id.</p>
+
+    <h4>A List Group</h4>
+
+    <div class="list-group">
+      <a href="" class="list-group-item">
+        <h4 class="list-group-item-heading">Kale</h4>
+        <p class="list-group-item-text">Kale or borecole is a vegetable, in which the central leaves do no form a head.</p>
+      </a>
+
+      <a href="" class="list-group-item">
+        <h4 class="list-group-item-heading">Carrots</h4>
+        <p class="list-group-item-text">Kale or borecole is a vegetable, in which the central leaves do no form a head.</p>
+      </a>
+
+      <a href="" class="list-group-item">
+        <h4 class="list-group-item-heading">Steel-cut parts</h4>
+        <p class="list-group-item-text">Kale or borecole is a vegetable, in which the central leaves do no form a head.</p>
+      </a>
+
+      <a href="" class="list-group-item">
+        <h4 class="list-group-item-heading">Kale</h4>
+        <p class="list-group-item-text">Kale or borecole is a vegetable, in which the central leaves do no form a head.</p>
+      </a>
+    </div>{{!-- end list-group --}}
+
+    <h5>A Small Heading</h5>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque ipsa, illo beatae! Dolores maiores aliquid fuga dicta accusamus assumenda in libero voluptatum provident dolorum doloremque aliquam, esse necessitatibus fugiat sint.</p>
+  </div>{{!-- end col-sm-6 --}}
 </div>{{!-- end moreInfo --}}
 
+<hr>
+
 <div class="row" id="moreProducts">
-  
+  <h3>Learn more about our products</h3>
+  <div class="thumbnails row">
+    <div class="col-xs-6">
+      <div class="thumbnail">
+        <img src="images/umyvalnik-cersanit-president-P045-500x500.jpg" alt="Cersanit President 6">
+
+        <div class="label label-success price"><span class="glyphicon glyphicon-tag"></span> <sup>$</sup>39</div>
+
+        <div class="caption">
+          <h3>Умывальник Cersanit President 60 см</h3>
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse asperiores pariatur nisi ullam rem sequi facere, consequatur error est nulla libero, suscipit, eius saepe consequuntur officia tempore doloremque debitis architecto.</p>
+
+          <p><a href="https://www.google.com/" class="btn btn-primary" target="_blank">Купить раковину</a>
+          <a href="https://www.google.com/" class="btn btn-small btn-link" target="_blank">Сравнить цены</a></p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-xs-6">
+      <div class="thumbnail">
+        <img src="images/1900_3t3yvn5s.mdx.jpg" alt="Раковина PT 55">
+
+        <div class="label label-info price"><span class="glyphicon glyphicon-tag"></span>Free</div>
+
+        <div class="caption">
+          <h3>Раковина PT 55 з/о (UA) UM-10-55-1</h3>
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse asperiores pariatur nisi ullam rem sequi facere, consequatur error est nulla libero, suscipit, eius saepe consequuntur officia tempore doloremque debitis architecto.</p>
+
+          <p><a href="https://www.google.com/" class="btn btn-primary" target="_blank">Купить раковину</a>
+          <a href="https://www.google.com/" class="btn btn-small btn-link" target="_blank">Сравнить цены</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
