--- a/ekoterm-org-ember/app/styles/app.css
+++ b/ekoterm-org-ember/app/styles/app.css
@@ -14,6 +14,13 @@
   margin-bottom: 15px;
 }
 
+footer {
+  background: #333;
+  color: #eee;
+  font-size: 11px;
+  padding: 20px;
+}
+
 /*-----------------------------
   Typography
   -----------------------------*/
@@ -24,6 +31,11 @@
 
 .well .page-header h1 {
   margin-top: 0;
+}
+
+ul.unstyled {
+  list-style: none;
+  padding: 0;
 }
 
 /*-----------------------------
@@ -42,6 +54,36 @@
   margin: 0 20px 10px 0;
 }
 
+.thumbnails {
+  margin: 20px 0;
+}
+
+.thumbnail {
+  position: relative;
+}
+
+.thumbnail h3 {
+  font-size: 16px;
+  margin: 0 0 10px;
+  line-height: 20px;
+}
+
+.thumbnail .price {
+  font-size: 20px;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  padding: 10px;
+}
+
+.thumbnail .price sup {
+  font-weight: normal;
+  font-size: 12px;
+}
+
+.thumbnail span.glyphicon {
+  margin-right: 5px;
+}
 /*-----------------------------
   Navbar
   -----------------------------*/
@@ -81,7 +123,15 @@
    -----------------------------*/
 
 /* Portrait & landscape phone */
-@media (max-width: 400px) {
+@media (max-width: 480px) {
+
+  .thumbnail .price {
+    font-size: 14px;
+  }
+
+  .thumbnail .price sup {
+    font-size: 10px;
+  }
 }
 
 /*Landscape phone to portrait tablet*/
