Changed price of an article

--- a/ekoterm-org-ember/app/templates/index.hbs
+++ b/ekoterm-org-ember/app/templates/index.hbs
@@ -195,7 +195,7 @@
       <div class="thumbnail">
         <img src="images/1900_3t3yvn5s.mdx.jpg" alt="Раковина PT 55">
 
-        <div class="label label-info price"><span class="glyphicon glyphicon-tag"></span>Free</div>
+        <div class="label label-info price"><span class="glyphicon glyphicon-tag"></span><sup>$</sup>52</div>
 
         <div class="caption">
           <h3>Раковина PT 55 з/о (UA) UM-10-55-1</h3>
