Created contacts and pricelists routes

--- a/ekoterm-org-ember/app/templates/components/hover-products-menu.hbs
+++ b/ekoterm-org-ember/app/templates/components/hover-products-menu.hbs
@@ -5,35 +5,35 @@
         Категории товаров
       </li>
 
-      <li>{{#link-to "about"}}
+      <li>{{#link-to "contacts"}}
             Котельное оборудование
           {{/link-to}}
       </li>
-      <li>{{#link-to "about"}}
+      <li>{{#link-to "contacts"}}
             Насосное оборудование
           {{/link-to}}
       </li>
-      <li>{{#link-to "about"}}
+      <li>{{#link-to "contacts"}}
             Радиаторы
           {{/link-to}}
       </li>
-      <li>{{#link-to "about"}}
+      <li>{{#link-to "contacts"}}
             Трубы и фитинги
           {{/link-to}}
       </li>
-      <li>{{#link-to "about"}}
+      <li>{{#link-to "contacts"}}
             Канализация
           {{/link-to}}
       </li>
-      <li>{{#link-to "about"}}
+      <li>{{#link-to "contacts"}}
             Запорная арматура
           {{/link-to}}
       </li>
-      <li>{{#link-to "about"}}
+      <li>{{#link-to "contacts"}}
             Системы теплого пола
           {{/link-to}}
       </li>
-      <li>{{#link-to "about"}}
+      <li>{{#link-to "contacts"}}
             Энергия солнца
           {{/link-to}}
       </li>
