--- a/ekoterm-org-ember/app/templates/contacts.hbs
+++ b/ekoterm-org-ember/app/templates/contacts.hbs
@@ -1,1 +1,7 @@
-{{outlet}}
+<div class="row" id="moreInfo">
+  <div class="col-xs-12">
+
+    {{directions-info}}
+
+  </div>{{!-- end col-sm-6 --}}
+</div>{{!-- end moreInfo --}}
