--- a/ekoterm-org-ember/app/templates/index.hbs
+++ b/ekoterm-org-ember/app/templates/index.hbs
@@ -4,8 +4,14 @@
     {{hover-products-menu}}
   </div>
 
-  <div class="col-xs-8">
-    {{item-search}}
+  <div class="col-xs-8 no-padding">
+    <div class="col-xs-10">
+      {{item-search}}
+    </div>
+
+    <div class="col-xs-2">
+      <button class="btn btn-lg btn-primary">Cart</button>
+    </div>
   </div>
   <div class="col-xs-8">
     {{eko-carousel}}
