--- a/ekoterm-org-ember/app/styles/app.css
+++ b/ekoterm-org-ember/app/styles/app.css
@@ -2,6 +2,31 @@
   Layout
   -----------------------------*/
 
+body {
+  background-color: #eee;
+}
+
+h1.sitelogo {
+  font-weight: bold;
+  margin: 0px;
+  font-size: 32px;
+  color: #9FD600;
+  text-shadow: 1px 1px 0 rgba(0,0,0,.4);
+  text-align: center;
+}
+
+h1.sitelogo .warm {
+  color: #FF6F3F;
+}
+
+.logoSlogan {
+  font-size: 12px;
+  color: #545454;
+  display: block;
+  text-align: center;
+  margin-top: 2px;
+}
+
 #features {
   text-align: center;
 }
@@ -14,8 +39,22 @@
   margin-bottom: 15px;
 }
 
+footer.red {
+  background: #CC6600; /* Old browsers */
+  background: -moz-linear-gradient(top,  #CC6600 0%, #CC6633 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  #CC6600 0%,#CC6633 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  #CC6600 0%,#CC6633 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#CC6600', endColorstr='#CC6633',GradientType=0 ); /* IE6-9 */
+
+}
+
 footer {
-  background: #333;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#789915+0,729900+100 */
+  background: #789915; /* Old browsers */
+  background: -moz-linear-gradient(top,  #789915 0%, #729900 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  #789915 0%,#729900 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  #789915 0%,#729900 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#789915', endColorstr='#729900',GradientType=0 ); /* IE6-9 */
   color: #eee;
   font-size: 11px;
   padding: 20px;
@@ -44,6 +83,13 @@ footer {
   padding-right: 0 !important;
 }
 
+.searchBar {
+  margin: 5px 0 12px 0;
+}
+
+#menuAndSearch {
+  margin-bottom: 20px;
+}
 
 /*-----------------------------
   Typography
@@ -121,9 +167,9 @@ ul.unstyled {
   /*background: #000;*/
 }
 
-.sidebar-nav {
+/*.sidebar-nav {
   list-style-type: none;
-}
+}*/
 
 /*-----------------------------
   Carousel
