--- a/ekoterm-org-ember/app/templates/header.hbs
+++ b/ekoterm-org-ember/app/templates/header.hbs
@@ -12,7 +12,7 @@
       {{/link-to}}
     </div>
 
-    <div class="collapse navbar-collapse" id="navbar-responsive-collapse">
+    <div class="collapse navbar-collapse pull-right" id="navbar-responsive-collapse">
       <ul class="nav navbar-nav">
         {{#link-to 'contacts' tagName='li'}}
           {{link-to 'Контакты' 'contacts'}}
@@ -21,21 +21,6 @@
         {{#link-to 'pricelists' tagName='li'}}
           {{link-to 'Прайс лист' 'pricelists'}}
         {{/link-to}}
-      </ul>
-
-      <ul class="nav navbar-nav pull-right">
-        {{#bs-dropdown tagName="li"}}
-          {{#bs-dropdown-toggle}}
-            <span class="glyphicon glyphicon-user"></span> Мой аккаунт <span class="caret"></span>
-          {{/bs-dropdown-toggle}}
-          {{#bs-dropdown-menu}}
-            <li>{{#link-to "index"}} <span class="glyphicon glyphicon-wrench"></span> Settings {{/link-to}}</li>
-            <li>{{#link-to "index"}} <span class="glyphicon glyphicon-refresh"></span> Profile {{/link-to}}</li>
-            <li>{{#link-to "index"}} <span class="glyphicon glyphicon-briefcase"></span> Billing {{/link-to}}</li>
-            <li role="separator" class="divider"></li>
-            <li>{{#link-to "index"}} <span class="glyphicon glyphicon-off"></span> Logout {{/link-to}}</li>
-          {{/bs-dropdown-menu}}
-        {{/bs-dropdown}}
       </ul>
     </div>
   </div>{{!-- end container --}}
