--- a/ekoterm-org-ember/app/templates/index.hbs
+++ b/ekoterm-org-ember/app/templates/index.hbs
@@ -1,19 +1,26 @@
+<div class="row" id="logoAndSearchBar">
+<div class="col-xs-3">
+  <h1 class="sitelogo">
+    Eko<span class="warm">TERM</span>
+  </h1>
+  <span class="logoSlogan">Энергия солнца</span>
+</div>
 
-<div class="row" id="menuAndSearch">
-  <div class="col-xs-4">
+  <div class="col-xs-9 searchBar">
+      {{item-search}}
+    {{!-- <div class="col-xs-2">
+      <button class="btn btn-lg btn-primary">Cart</button>
+    </div> --}}
+  </div>
+</div>
+
+
+<div class="row" id="menuAndCarousel">
+  <div class="col-xs-3">
     {{hover-products-menu}}
   </div>
 
-  <div class="col-xs-8 no-padding">
-    <div class="col-xs-10">
-      {{item-search}}
-    </div>
-
-    <div class="col-xs-2">
-      <button class="btn btn-lg btn-primary">Cart</button>
-    </div>
-  </div>
-  <div class="col-xs-8">
+  <div class="col-xs-9">
     {{eko-carousel}}
   </div>
 </div>
