--- a/ekoterm-org-ember/app/templates/index.hbs
+++ b/ekoterm-org-ember/app/templates/index.hbs
@@ -1,12 +1,12 @@
 <div class="row" id="logoAndSearchBar">
-<div class="col-xs-3">
+<div class="col-xs-4">
   <h1 class="sitelogo">
     Eko<span class="warm">TERM</span>
   </h1>
   <span class="logoSlogan">Энергия солнца</span>
 </div>
 
-  <div class="col-xs-9 searchBar">
+  <div class="col-xs-8 searchBar">
       {{item-search}}
     {{!-- <div class="col-xs-2">
       <button class="btn btn-lg btn-primary">Cart</button>
@@ -16,11 +16,17 @@
 
 
 <div class="row" id="menuAndCarousel">
-  <div class="col-xs-3">
+  <div class="col-xs-4 no-padding-right">
     {{hover-products-menu}}
   </div>
 
-  <div class="col-xs-9">
+  <div class="col-xs-8 no-padding-left">
+    <div class="carousel-header">
+      <span>
+        Полезные ссылки
+      </span>
+    </div>
+
     {{eko-carousel}}
   </div>
 </div>
