--- a/ekoterm-org-ember/app/templates/header.hbs
+++ b/ekoterm-org-ember/app/templates/header.hbs
@@ -12,7 +12,7 @@
       {{/link-to}}
     </div>
 
-    <div class="collapse navbar-collapse pull-right" id="navbar-responsive-collapse">
+    <div class="collapse navbar-collapse" id="navbar-responsive-collapse">
       <ul class="nav navbar-nav">
         {{#link-to 'contacts' tagName='li'}}
           {{link-to 'Контакты' 'contacts'}}
