--- a/ekoterm-org-ember/app/templates/components/eko-carousel.hbs
+++ b/ekoterm-org-ember/app/templates/components/eko-carousel.hbs
@@ -1,4 +1,4 @@
-<div class="carousel slide" id="ekoCarousel" data-ride="carousel">
+<div class="carousel slide" id="ekoCarousel" data-ride-no="carousel">
 
   {{!-- Indicators --}}
   <ol class="carousel-indicators">
@@ -11,8 +11,8 @@
   <div class="carousel-inner">
     <div class="item active" id="slide1">
       <div class="carousel-caption">
-        <h4>Bosch</h4>
-        <p>Водонагреватели</p>
+        <h4>Buderus</h4>
+        <p>Водонагреватель LogamaxPlus GB162 PR</p>
       </div>
     </div>
 
