--- a/ekoterm-org-ember/app/templates/index.hbs
+++ b/ekoterm-org-ember/app/templates/index.hbs
@@ -21,10 +21,30 @@
   </div>
 
   <div class="col-xs-8 no-padding-left">
-    <div class="carousel-header">
-      <span>
-        Полезные ссылки
-      </span>
+    <div class="carousel-header-wrapper">
+      <li class="carousel-header-link-li">
+        <a href="#" class="carousel-header-link">
+          Полезные ссылки
+        </a>
+      </li>
+
+      <li class="carousel-header-link-li">
+        <a href="#" class="carousel-header-link">
+          Товары
+        </a>
+      </li>
+
+      <li class="carousel-header-link-li">
+        <a href="#" class="carousel-header-link">
+          Предложения
+        </a>
+      </li>
+
+      <li class="carousel-header-link-li">
+        <a href="#" class="carousel-header-link">
+          Скидки
+        </a>
+      </li>
     </div>
 
     {{eko-carousel}}
