--- a/ekoterm-org-ember/app/templates/header.hbs
+++ b/ekoterm-org-ember/app/templates/header.hbs
@@ -22,6 +22,19 @@
           {{link-to 'Прайс лист' 'pricelists'}}
         {{/link-to}}
       </ul>
-    </div>
+
+      <div class="contact-options pull-right">
+        <li>
+          <span class="glyphicon glyphicon glyphicon-earphone"></span>
+          <strong>(0612) 23-456-789</strong>
+        </li>
+        <li>
+          (098) 124-567-321
+        </li>
+        <li>
+          <a href="mailto:ekoterm.zp@ukr.net">ekoterm.zp@ukr.net</a>
+        </li>
+      </div>
+    </div>{{!-- end navbar-collapse --}}
   </div>{{!-- end container --}}
 </nav>{{!-- end navbar --}}
